Fixed align for h3 common style

--- a/src/css/base/common.css
+++ b/src/css/base/common.css
@@ -35,6 +35,7 @@ body {
 
 .header-three {
     color: var(--color-black);
+    text-align: center;
     font-size: 20px;
     font-weight: var(--font-weight-primary-bold);
     line-height: 1.2;
